--- a/camera/README
+++ b/camera/README
@@ -1,4 +1,4 @@
-ICS Camera HAL based + TI Overlay for the Defy
+The ICS Camera HAL for P990/SU660
 
 based on Raviprasad V Mummidi for Qcom camera
 https://github.com/rapmv78/android_hardware_qcom_camerahal
